[package]
name = "geoip-rs"
description = "geoip-rs provides geographical information about the calling or the specified IP address"
version = "0.4.0"
authors = ["Federico Fissore <federico@fissore.org>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ffissore/geoip-rs"
keywords = ["geoip", "maxmind", "geolocation"]
homepage = "https://geoip.rs/"

[dependencies]
iron = "0.6.*"
urlencoded = "0.6.*"
serde = "1"
serde_derive = "1"
serde_json = "1"
iron-cors = "0.8.0"
maxminddb = { version = "0.13.0", features = ["mmap"] }
memmap = "0.7.0"
